2009-03-20  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Misc improvements to prestarting sequence.
	Fixes: NB#106507

	* src/launcher/hd-app-mgr.c:

2009-03-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  Little cleanup: name things by their proper name and rename
	  HdCompMgrClientPrivate::portrait_supported to portrait_not_supported.

2009-03-20  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/home/hd-title-bar.c: Ensured that the progress indicator is at
        the end of the title, and that it never overlaps the close button. 
        
2009-03-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#107155 ROTATION: Call handling with system lock dialog is not
	          shown in portrait mode

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait):
	  Honor the current application's portrait request even
	  if it's not currently visible.

2009-03-20  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Track the windows (including dialogs) for each app so the HdCompMgr can
	tell HdAppMgr when an app has disappeared.
	Fixes: NB#106673

	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-app-mgr.h:
	* src/launcher/hd-launcher-item.c: Added a way to get the GQuark of the
	application id.
	* src/launcher/hd-launcher-item.h:
	* src/launcher/hd-launcher.c:
	* src/mb/hd-comp-mgr.c:

2009-03-20  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/home/hd-render-manager.c: Fix for NB#106678 - Home edit tab
        staying visible when changing states.

2009-03-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-title-bar.c (HD_TITLE_BAR_TEXT_MARGIN): Use 24px instead
	of 8px.

2009-03-19  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/home/hd-render-manager.c: Removed warnings generated by clutter
        if restack is called before an actor is parented

2009-03-19  Jan Arne Petersen  <jpetersen@openismus.com>
